; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_rtsp.c_rtsp_play.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_rtsp.c_rtsp_play.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURLE_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"\0ARTSP: PLAY %s\0A\00", align 1
@CURLOPT_RTSP_STREAM_URI = common dso_local global i32 0, align 4
@CURLOPT_RANGE = common dso_local global i32 0, align 4
@CURLOPT_RTSP_REQUEST = common dso_local global i32 0, align 4
@CURL_RTSPREQ_PLAY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*)* @rtsp_play to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtsp_play(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* @CURLE_OK, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* @CURLOPT_RTSP_STREAM_URI, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 (i32*, i32, ...) @my_curl_easy_setopt(i32* %11, i32 %12, i8* %13)
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @CURLOPT_RANGE, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 (i32*, i32, ...) @my_curl_easy_setopt(i32* %15, i32 %16, i8* %17)
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* @CURLOPT_RTSP_REQUEST, align 4
  %21 = load i64, i64* @CURL_RTSPREQ_PLAY, align 8
  %22 = call i32 (i32*, i32, ...) @my_curl_easy_setopt(i32* %19, i32 %20, i64 %21)
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @my_curl_easy_perform(i32* %23)
  %25 = load i32*, i32** %4, align 8
  %26 = load i32, i32* @CURLOPT_RANGE, align 4
  %27 = call i32 (i32*, i32, ...) @my_curl_easy_setopt(i32* %25, i32 %26, i8* null)
  ret void
}

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @my_curl_easy_setopt(i32*, i32, ...) #1

declare dso_local i32 @my_curl_easy_perform(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
